# todo-tui

./: Cargo.toml  README.md
.github/workflows/: rust_ci.yaml
docs/: Component.md  ComponentGPT.md
src/: app.rs  core.rs  main.rs  utils.rs
src/tui/: app.rs  mod.rs  run.rs
src/tui/widgets/: button.rs  component.rs  input_field.rs  mod.rs  task_form.rs  task_info.rs  tasks_list.rs
src/widgets/: component.rs  input_field.rs  input_popup.rs  mod.rs  task_info.rs  tasks_list.rs
stash/: task_form.rs
