[package]
name = "todo-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- CLI ---
ratatui = "0.29"
crossterm = "0.29"
color-eyre = "0.6.5"
# --- (de)serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# --- other ---
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
